adds edit of owned questions and tests
