# api/dtos/question.go
@@ -5,6 +5,12 @@ type NewQuestionDto struct {
 	Anonymous bool   `json:"anonymous"`
 }
 
+type UpdateQuestionDto struct {
+	Id        string `json:"id" binding:"required"`
+	Text      string `json:"text" binding:"required"`
+	Anonymous bool   `json:"anonymous"`
+}
+
 type QuestionDto struct {
 	Id        string
 	Text      string
